ids-only param to ConnectionsParameter and openapi
